update Dockerfile base image